# trab2-oc-noc-spin

./: CMakeLists.txt  README.md  main.cpp  rspin_router.cpp  rspin_router.h  spin_fat_tree.cpp  spin_fat_tree.h  spin_flit.h  terminal.cpp  terminal.h
documents/: apresentacao.tex  relatorio.tex
include/spin/: config.hpp  fat_tree.hpp  flit.hpp  router.hpp  terminal.hpp  trace.hpp
src/: fat_tree.cpp  router.cpp  terminal.cpp  trace.cpp
tests/: test_convergence.cpp  test_harness.hpp  test_local_flow.cpp  test_many_to_one.cpp  test_permutation.cpp  test_single_flow.cpp
